--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "add-to-calendar-button-react": "^2.6.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.1.8",
+    "embla-carousel-autoplay": "^8.1.8",
+    "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.8",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
