--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "add-to-calendar-button-react": "^2.6.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "confetti-react": "^2.6.0",
     "embla-carousel": "^8.1.8",
     "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-confetti-explosion": "^2.1.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
